Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32776

Can't use code editor in test automation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • Qt Creator 17.0.0-beta1
    • Qt Creator 17.0.0
    • Editors
    • None
    • Creator 17.0.0-beta1 + Qt 6.9.0
    • cfc26cdf7 (17.0)

    Description

      ~50% of Creator automation tests started to fail with the latest build. Tests are failing when code editor is used:

      AttributeError: 'QmlJSEditor::QmlJSEditorWidget' Squish object has no attribute 'textCursor'
      AttributeError: 'CppEditor::CppEditorWidget' Squish object has no attribute 'textCursor'
      AttributeError: 'TextEditor::TextEditorWidget' Squish object has no attribute 'toPlainText'

      I noticed that there is one difference in editor properties:
      Creator 16.0.1:

      Creator 17.0.0-beta1:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change