Editor: fix squish tests

Changing the base of TextEditor::TextEditorWidget from QPlainTextEdit to
Utils::PlainTextEdit made some functions of the base class inaccessible
for squish. So we need to use the properties or make the used functions
available via Q_PROPERTY.

Fixes: QTCREATORBUG-32776
Change-Id: Ie3c45b2de958a9b82a4b4323558830c993187c52
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>